# app/controllers/concerns/jwt.rb
@@ -1,21 +1,0 @@
-module Jwt
-    extend ActiveSupport::Concern
-
-    included do
-        def not_found
-            render json: { error: 'not_found' }
-        end
-        def authorize_request
-            header = request.headers['Authorization']
-            header = header.split(' ').last if header
-            begin
-              @decoded = JsonWebToken.decode(header)
-              @current_user = User.find(@decoded[:user_id])
-            rescue ActiveRecord::RecordNotFound => e
-              render json: { errors: e.message }, status: :unauthorized
-            rescue JWT::DecodeError => e
-              render json: { errors: e.message }, status: :unauthorized
-            end
-          end
-    end
-end
