# app/models/user.rb
@@ -1,6 +1,7 @@
 class User < ApplicationRecord
-    has_secure_password
-    validates :username, presence: true, uniqueness: true
-    validates :password, length: { minimum: 6 }
-
+  has_secure_password
+  validates :username, presence: true, uniqueness: true
+  validates :password, length: { minimum: 6 }
+  validates :email, presence: true, uniqueness: true
+  validates :email, format: { with: URI::MailTo::EMAIL_REGEXP }
 end
